tests/positive/rule3_percent.safe
-- Test: rule3_percent
-- Description: Percentage computation with safe division.
--   The total is verified nonzero before computing the percentage.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p133:0610d951
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p127:d5d93439
-- Expected: ACCEPT

package safe_percent

   subtype percentage is integer (0 to 100);
   subtype count is integer (0 to 1_000_000);

   --  Compute_Percentage: calculates (Part * 100) / Total.
   --  Guards against zero Total before dividing.
   function compute_percentage (part, total : count) returns percentage

      if total > 0 and then part <= total
         --  Total is provably nonzero by the guard.
         --  Part * 100 <= Total * 100 <= 100_000_000, within 64-bit.
         --  Result: (Part * 100) / Total is in 0..100.
         return percentage ((integer (part) * 100) / integer (total));
      else
         return 0;

